--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,5 @@
     <h3 id="finalScore" class="end endText">Score: 0</h3>
     <button id="retry" class="end endText">Play Again?</button>
   </div>
-  <script src="main.js" type="text/javascript"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
